Preventing allergy reactions from wrapping

--- a/omod/src/main/compass/sass/allergy.scss
+++ b/omod/src/main/compass/sass/allergy.scss
@@ -19,6 +19,7 @@ label {
 
   label {
     margin-top: 2px;
+    display: inline;
   }
 }
 
